[package]
name = "labrpc"
version = "0.1.11"
authors = ["Jing Yang <ditsing@gmail.com>"]
description = "A RPC framework for testing"
edition = "2018"
license = "MIT"

[dependencies]
bytes = "1.0"
crossbeam-channel = "0.5.1"
futures = { version = "0.3.15", default-features = false, features = ["thread-pool"] }
parking_lot = "0.11.1"
rand = "0.8.0"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread", "sync", "time", "parking_lot"] }

[features]
default = []
tracing = []
