[package]
name = "labrpc"
version = "0.2.3"
authors = ["Jing Yang <ditsing@gmail.com>"]
description = "A RPC framework for testing"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ditsing/labrpc"
homepage = "https://github.com/ditsing/labrpc"

[dependencies]
bytes = "1.1"
crossbeam-channel = "0.5.4"
futures = { version = "0.3.21", default-features = false, features = ["std"]}
parking_lot = "0.12"
rand = "0.8.0"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread", "sync", "time", "parking_lot"] }

[dev-dependencies]
futures = { version = "0.3.21", default-features = false, features = ["std", "thread-pool"] }
lazy_static = "1.4.0"

[features]
default = []
tracing = []
